# email-triage-env

./: README.md  app.py  baseline_scores.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smart_agent.py
email-triage-env/email-triage-env/: Dockerfile  app.py  docker-compose.yml  openenv.yaml
email-triage-env/email-triage-env/frontend/: vite.config.js
email-triage-env/email-triage-env/graders/: graders.py
email-triage-env/env/: email_triage_env.py
env/: email_triage_env.py
frontend/: index.html  package.json
frontend/src/: App.jsx
graders/: graders.py
server/: app.py
