[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv - Real-world email triage RL environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.57.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*"]

[project.scripts]
serve = "app:app"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entry_point = "app:app"
port = 7860
tasks = ["task_easy_spam", "task_medium_triage", "task_hard_ambiguous"]
