[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage RL environment"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv-core>=0.2.0",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:main"

